# bot_telegram_exe

./: CMakeLists.txt  painel.cs  painelcit.py  painelcity.cpp  vcpkg.json
.github/workflows/: build_exe.yml
include/cpp-httplib/: httplib.h
